Worked on front end development
Created the messages page with dummy info and commodes list with swipe
to reveal options. Also added more templates.

Also removed all files under the platform folder as those are extra
build files that 59DaysOfCode does not need to see but can if needed.

--- a/app/ionic.project
+++ b/app/ionic.project
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "email": "",
-  "app_id": "",
-  "package_name": ""
+  "name": "Comrade",
+  "email": "aaron@teknologenie.com",
+  "app_id": "7aa151dc",
+  "package_name": "com.teknologenie.comrade"
 }
