Did several things over the past few days
This commit is big because i successfully created a way based off of
the idea in someone else’s app to use the inAppBrowser to popup a
oAuth2 provider, have the user login, grab the URL, parse out the
access_token, then send that off to my AWS EC2 server running a RESTful
CRUD api i will be starting now that i have successfully done the hard
part of getting the users access_token.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,82 @@
 
 *.cookies
 
+*.xdk
+
+*.xdke
+
 app/platforms/*
+
+app/plugins/*
+
+app/merges/*
+
+app/hooks/*
+
+app/platforms/android/res/xml/config.xml
+
+app/platforms/ios/www/cordova_plugins.js
+
+app/platforms/ios/www/css/style.css
+
+app/platforms/ios/www/index.html
+
+app/platforms/ios/www/js/app.js
+
+app/platforms/ios/www/js/controllers.js
+
+app/platforms/ios/www/js/services.js
+
+app/plugins/android.json
+
+app/plugins/ios.json
+
+app/platforms/android/AndroidManifest.xml
+
+app/platforms/android/assets/www/cordova_plugins.js
+
+app/platforms/android/assets/www/css/style.css
+
+app/platforms/android/assets/www/js/app.js
+
+app/platforms/android/assets/www/js/controllers.js
+
+app/platforms/android/assets/www/js/services.js
+
+.idea/dictionaries/aaronrussell.xml
+
+.idea/workspace.xml
+
+app/platforms/android/AndroidManifest.xml
+
+app/platforms/android/assets/www/cordova_plugins.js
+
+app/platforms/android/assets/www/css/style.css
+
+app/platforms/android/assets/www/js/app.js
+
+app/platforms/android/assets/www/js/controllers.js
+
+app/platforms/android/assets/www/js/services.js
+
+.idea/dictionaries/aaronrussell.xml
+
+app/platforms/ios/www/css/style.css
+
+app/platforms/ios/www/index.html
+
+app/platforms/ios/www/js/app.js
+
+app/platforms/ios/www/js/controllers.js
+
+app/platforms/ios/www/js/services.js
+
+app/plugins/android.json
+
+app/plugins/ios.json
+
+app/platforms/ios/www/cordova_plugins.js
+
+app/platforms/android/res/xml/config.xml
+
+.idea/workspace.xml
