--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend",
   "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
+  "version": "0.0.1",
+  "description": "REST API for Comrade App, this is the backend.",
   "keywords": [],
   "dependencies": {
     "sails": "~0.10.0-rc7",
